added read me and instructions and more doc

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-  <h1>bouncing balls Fran Prieto</h1>
+  <h1>bouncing balls addapted by <a href="https://www.linkedin.com/in/francisco-javier-prieto-gut/" target="_blank">Fran Prieto</a></h1>
 
   <canvas id="myCanvas"></canvas>
     
